# beutelnet

./: .gitignore  README.md  __main__.py  config.py  pyproject.toml
beutelnet/: db.sqlite3  manage.py
beutelnet/bagsearch/: apps.py  models.py  views.py
beutelnet/bagsearch/migrations/: 0001_initial.py  0002_rename_bag_vaccumbags_vacuum.py  0004_rename_vacumbags_vacuumbags.py
beutelnet/bagsearch/templates/bagsearch/: index.html
beutelnet/beutelnet/: asgi.py  settings.py  urls.py  wsgi.py
src/beutelnet/bagsearch/: admin.py  apps.py  forms.py  models.py  pushdata.py  urls.py  views.py
src/beutelnet/bagsearch/migrations/: 0003_rename_vaccumbags_vacumbags.py  0005_alter_vacuumbags_size.py
src/beutelnet/beutelnet/: settings.py  urls.py
src/beutelnet/data/dm/: browser.py  extractor.py  main.py  page.py  productmodule.py  scraper.py  tile.py
src/beutelnet/data/edeka/: data.csv  edeka.csv  fetch-edeka-data.py  notebook.ipynb
src/beutelnet/data/rewe/: fetch-rewe-data.py  pdfscraper.py  rewe-cleaned.csv  rewe-cleaning-pipeline.ipynb  rewe.csv  staubsauger-old.odg  staubsauger.html  test.py
src/beutelnet/ocr/: notebook1(2).py
src/beutelnet/ocr/data/: database_writer.py
src/beutelnet/ocr/image_ocr/: clean_data.py  clean_ocr_output.py  ocr_image.py
src/beutelnet/ocr/image_pre_processor/: image_pre_processor.py  preprocess.py
src/beutelnet/storage/: database.db
src/data/: databasewriter.py  writer.py
src/images/: image_pre_processor.py
src/ocr/: __init__.py  process_image.py  process_ocr.py  scanner.py  splitter.py
storage/: database.db
(+22 files in other folders)
